[package]
name = "fzyr"
version = "0.1.2"
homepage = "https://github.com/yonni12/fzyr"
authors = ["yonni12 <https://github.com/yonni12>"]

description = "A fuzzy(er) finder 🔎"
repository = "https://github.com/yonni12/fzyr"
# TODO:
# documentation = ""

readme = "README.md"
categories = ["algorithms", "command-line-utilities"]
keywords = ["fuzzy", "finder", "find", "search"]
license-file = "LICENSE"

autobins = false


[lib]
name = "fzyr"


[[bin]]
name = "fzyr"
path = "src/bin/main.rs"
doc = false
required-features = ["binary-build"]


[dependencies]
ndarray = "^0.11.2"
bit-vec = "^0.5.0"
itertools = { version = "^0.7.8", optional = true }
crossbeam = { version = "^0.4.1", optional = true }
clap = { version = "^2.32.0", optional = true }
console = { version = "^0.6.1", optional = true }

[features]
default = ["parallel"]
binary-build = ["clap", "console"]
parallel = ["itertools", "crossbeam"]

[profile.release]
opt-level = 3
debug = false
lto = true
